# vision_lab

./: .gitignore  README.md  pyproject.toml  requirements.txt  settings.py  setup.py  temp.py
archive/mnist_classifier/: lit_stack_test.py
classification/: cifar100_colab.ipynb  mnist.ipynb  mnist.py
classification/checkpoint_decayed_avg/: plot_results.ipynb
companies/bungee/: main.ipynb  test.csv  train.csv
companies/tychon/: README.md  dataset.py  dataset_creator.py  experiment_1.ipynb  metrics.py  model.py  painting_swapper.py  requirements.txt  rotate_3d.py  train.py
mnist_aug/: loader.py  mnist_augmenter.py
mnist_aug/dataset_generators/: detection.py
mnist_classifier/: lit_stack_test.py
object_detection/: yolov1.ipynb
object_detection/detectron2/: detectron2_test.ipynb
object_detection/v1/: main.ipynb
object_detection/yolo1/: README.md  colab.ipynb  dataset.py  experiment_logger.py  loss.py  main.py  metrics.py  model.py  tests.py  train_mnist_aug.py  train_voc.py  trainer.py  transforms.py
object_detection/yolo1/datasets/: mnist_aug_dataset.py  voc_dataset.py
vision_lab/: settings.py
vision_lab/adhoc/: beta_distributions.ipynb
vision_lab/classification/: cifar100_colab.ipynb  mnist_colab.ipynb
vision_lab/classification/binary_bits/: README.md  train_bits_classifier.py
vision_lab/classification/checkpoint_decayed_avg/: train_cifar_256.py
vision_lab/classification/mnist_regression/: naive_regression.ipynb
vision_lab/mnist_aug/: aug_test.ipynb  loader.py
vision_lab/object_detection/: bbox_formats.py
(+22 files in other folders)
